[metadata]
name = boto3-helpers
version = 2.4.0
description = Helper utilities for boto3
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Bo Bayles
author_email = bo.bayles@wurl.com
license = Apache 2.0
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    homepage = https://github.com/openwurl/boto3-helpers

[options]
packages = find:
python_requires = >=3.8
install_requires =
    boto3
    botocore

[options.packages.find]
exclude =
    tests

[flake8]
max_line_length = 88
